--- a/LotteryPool/www/index.html
+++ b/LotteryPool/www/index.html
@@ -15,6 +15,9 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    
+    <!--backand SDK for Angular-->
+    <script src="lib/angularbknd-sdk/dist/backand.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -22,6 +25,7 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/services.js"></script>
   </head>
 
   <body ng-app="starter">
